--- a/apps/templates/admin/amcm/pago/fieldset.html
+++ b/apps/templates/admin/amcm/pago/fieldset.html
@@ -15,7 +15,7 @@
                     {% if not line.fields|length_is:'1' and not field.is_readonly %}
                         {{ field.errors }}{% endif %}
                     {% if field.is_checkbox %}
-                        {{ field.field }}{{ field.label_tag }}
+                        {{ field.field }} {{ field.label_tag }}
                     {% else %}
                         {{ field.label_tag }}
                         {% if field.is_readonly %}
@@ -30,13 +30,14 @@
 
                 </div>
             {% endfor %}
-                {% if forloop.last %}
-                    <div class="">
-                        <p><strong>Monto por Pagar :</strong> </p>
+
+        </div>
+        {% if forloop.last %}
+                    <div class="col-md-4">
+                        <strong>Monto por Pagar :</strong>
                         <p style="color: red;" id="totalpago"><strong>$ 0.00</strong></p>
                     </div>
                 {% endif %}
-        </div>
     {% endfor %}
 </fieldset>
 
