--- a/apps/amcm/templates/amcm/evento_cuotas_pdf.html
+++ b/apps/amcm/templates/amcm/evento_cuotas_pdf.html
@@ -173,6 +173,19 @@
 
     <br>
     <table style="width: 100%;">
+        {% for obj in aportacion_fondo %}
+        <tr style="padding-top: 5px;">
+            <td style="width: 70%;text-align: right">
+                <p style="font-size: 12px; text-align: right"> {{ obj.cuota }} =</p>
+            </td>
+            <td style="width: 20%;text-align: right">
+                <p style="font-size: 12px; text-align: right">  $ {{ obj.monto_cuota }}</p>
+            </td>
+            <td style="width: 10%;text-align: right">
+            </td>
+        </tr>
+        {% endfor %}
+
         {% for obj in reporte_cuotas %}
         <tr style="padding-top: 5px;">
             <td style="width: 70%;text-align: right">
