listado de cuotas

--- a/apps/amcm/templates/amcm/evento_cuotas_pdf.html
+++ b/apps/amcm/templates/amcm/evento_cuotas_pdf.html
@@ -156,8 +156,8 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2" style="width: 100%;text-align: center">
-               <p style="font-size: 12px; text-align: center;" align="center">{{ evento.descripcion_evento| linebreaks }}</p>
+            <td colspan="2" style="width: 100%;text-align: justify">
+               <p style="font-size: 14px; text-align: justify;" align="justify">{{ evento.descripcion_evento }}</p>
 
             </td>
         </tr>
